tests/fail/no_from_str.stderr
error[E0277]: the trait bound `Test: FromStr` is not satisfied
 --> $DIR/no_from_str.rs:7:5
  |
7 |     sscanf::scanf!("hi", "{}", Test);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromStr` is not implemented for `Test`
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
